Giao diện trang chủ light-mode

--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,6 @@
                                     <th>#</th>
                                     <th></th>
                                     <th>Bài hát</th>
-                                    <th>Nghệ sĩ</th>
                                     <th>Album</th>
                                     <th>Lượt nghe</th>
                                     <th>Thời lượng</th>
@@ -1246,8 +1245,12 @@
                                             <img src="./assets/imgs/the_fate_of_ophelia.jpg" alt="The Fate of Ophelia cover" />
                                         </div>
                                     </td>
-                                    <td>The Fate of Ophelia</td>
-                                    <td>Taylor Swift</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">The Fate of Ophelia</div>
+                                            <div class="chart-artist">Taylor Swift</div>
+                                        </div>
+                                    </td>
                                     <td>The Life of a Showgirl</td>
                                     <td>7.40M</td>
                                     <td>3:46</td>
@@ -1259,8 +1262,12 @@
                                             <img src="./assets/imgs/golden_huntr.jpg" alt="Golden cover" />
                                         </div>
                                     </td>
-                                    <td>Golden</td>
-                                    <td>HUNTR/X, EJAE, AUDREY NUNA, REI A...</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">Golden</div>
+                                            <div class="chart-artist">HUNTR/X, EJAE, AUDREY NUNA, REI A...</div>
+                                        </div>
+                                    </td>
                                     <td>KPop Demon Hunters</td>
                                     <td>5.89M</td>
                                     <td>3:14</td>
@@ -1272,8 +1279,12 @@
                                             <img src="./assets/imgs/man_i_need.jpg" alt="Man I Need cover" />
                                         </div>
                                     </td>
-                                    <td>Man I Need</td>
-                                    <td>Olivia Dean</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">Man I Need</div>
+                                            <div class="chart-artist">Olivia Dean</div>
+                                        </div>
+                                    </td>
                                     <td>The Art of Loving</td>
                                     <td>4.74M</td>
                                     <td>3:04</td>
@@ -1285,8 +1296,12 @@
                                             <img src="./assets/imgs/back_to_friends.jpg" alt="back to friends cover" />
                                         </div>
                                     </td>
-                                    <td>back to friends</td>
-                                    <td>sombr</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">back to friends</div>
+                                            <div class="chart-artist">sombr</div>
+                                        </div>
+                                    </td>
                                     <td>I Barely Know Her</td>
                                     <td>4.61M</td>
                                     <td>3:19</td>
@@ -1298,8 +1313,12 @@
                                             <img src="./assets/imgs/ordinary_alex_warren.jpg" alt="Ordinary cover" />
                                         </div>
                                     </td>
-                                    <td>Ordinary</td>
-                                    <td>Alex Warren</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">Ordinary</div>
+                                            <div class="chart-artist">Alex Warren</div>
+                                        </div>
+                                    </td>
                                     <td>You'll Be Alright, Kid</td>
                                     <td>3.86M</td>
                                     <td>3:06</td>
@@ -1311,8 +1330,12 @@
                                             <img src="./assets/imgs/opalite.jpg" alt="Opalite cover" />
                                         </div>
                                     </td>
-                                    <td>Opalite</td>
-                                    <td>Taylor Swift</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">Opalite</div>
+                                            <div class="chart-artist">Taylor Swift</div>
+                                        </div>
+                                    </td>
                                     <td>The Life of a Showgirl</td>
                                     <td>3.73M</td>
                                     <td>3:55</td>
@@ -1324,8 +1347,12 @@
                                             <img src="./assets/imgs/so_easy_olivia_dean.jpg" alt="So Easy (To Fall In Love) cover" />
                                         </div>
                                     </td>
-                                    <td>So Easy (To Fall In Love)</td>
-                                    <td>Olivia Dean</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">So Easy (To Fall In Love)</div>
+                                            <div class="chart-artist">Olivia Dean</div>
+                                        </div>
+                                    </td>
                                     <td>The Art of Loving</td>
                                     <td>3.69M</td>
                                     <td>2:49</td>
@@ -1337,8 +1364,12 @@
                                             <img src="./assets/imgs/la_perla.jpg" alt="La Perla cover" />
                                         </div>
                                     </td>
-                                    <td>La Perla</td>
-                                    <td>ROSALÍA, Yahritza Y Su Esencia</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">La Perla</div>
+                                            <div class="chart-artist">ROSALÍA, Yahritza Y Su Esencia</div>
+                                        </div>
+                                    </td>
                                     <td>LUX</td>
                                     <td>3.45M</td>
                                     <td>3:15</td>
@@ -1350,8 +1381,12 @@
                                             <img src="./assets/imgs/where_is_my_husband.jpg" alt="WHERE IS MY HUSBAND! cover" />
                                         </div>
                                     </td>
-                                    <td>WHERE IS MY HUSBAND!</td>
-                                    <td>RAYE</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">WHERE IS MY HUSBAND!</div>
+                                            <div class="chart-artist">RAYE</div>
+                                        </div>
+                                    </td>
                                     <td>WHERE IS MY HUSBAND!</td>
                                     <td>3.35M</td>
                                     <td>3:16</td>
@@ -1363,8 +1398,12 @@
                                             <img src="./assets/imgs/birds_of_a_feather.jpg" alt="BIRDS OF A FEATHER cover" />
                                         </div>
                                     </td>
-                                    <td>BIRDS OF A FEATHER</td>
-                                    <td>Billie Eilish</td>
+                                    <td>
+                                        <div class="chart-title-artist">
+                                            <div class="chart-title">BIRDS OF A FEATHER</div>
+                                            <div class="chart-artist">Billie Eilish</div>
+                                        </div>
+                                    </td>
                                     <td>HIT ME HARD AND SOFT</td>
                                     <td>3.32M</td>
                                     <td>3:30</td>
@@ -1438,7 +1477,7 @@
             <div class="bar">
                 <!-- Left: bài đang phát -->
                 <div class="left">
-                    <div class="cover" style="width: 48px; height: 48px; border-radius: 6px;">
+                    <div class="cover" style="width: 64px; height: 64px; border-radius: 8px;">
                         <img
                             id="cover"
                             alt="Bìa bài hát"
